--- a/projekt-20-literatura-bibliography.bib
+++ b/projekt-20-literatura-bibliography.bib
@@ -158,14 +158,23 @@
 	pages 		= "609–614"
 }
 
-@webpage{MockServer,	
-	author			= "Bloom, James",
-	title 			= "MockServer",
-	howpublished	= "online",
-	year 			= "2020",	
-	url 			= "https://www.mock-server.com/#what-is-mockserver",
-	publisher		= "Mock Server",
-	cited 			= "2021-04-28"
+@book{UnitPatternsTest,	
+	author 		= "Meszaros, Gerard",
+	title 		= "xUnit Test Patterns",
+	publisher 	= "Addison-Wesley",
+	year 		= "2007",
+	isbn		= "978-0-13-149505-0",
+}
+
+@webpage{Userspace,
+	author		= "Jones, M",	
+	title 		= "Anatomy of the Linux kernel",
+	howpublished= "online",
+	year 		= "2007",	
+	month		= "06",
+	url			= "https://developer.ibm.com/technologies/linux/articles/l-linux-kernel/",
+	publisher	= "IBM",
+	cited 		= "2021-05-06"
 }
 
 @inproceedings{FuseOrNotToFuse,
@@ -186,14 +195,15 @@
 	url 		= "https://ieeexplore.ieee.org/document/8590996"
 }
 
-@webpage{xdg,
-	key 			= "xdg",
-	title 			= "xdg-utils",
+@webpage{DBus,
+	author			= "Cocagne, Tom",
+	title 			= "DBus Overview",
 	howpublished	= "online",
-	year 			= "2019",
-	url 			= "https://freedesktop.org/wiki/Software/xdg-utils/",
-	publisher		= "freedesktop.org",
-	cited 			= "2021-04-20"
+	year 			= "2012",
+	month			= "07",
+	url 			= "https://pythonhosted.org/txdbus/dbus_overview.html",
+	publisher		= "pythonhosted.org",
+	cited 			= "2021-05-05"
 }
 
 @webpage{Keyring,
@@ -206,4 +216,15 @@
 	url 			= "https://rtfm.co.ua/en/what-is-linux-keyring-gnome-keyring-secret-service-and-d-bus/",
 	publisher		= "RTFM: Linux, DevOps, and system administration",
 	cited 			= "2021-05-02"
+}
+
+@webpage{xdg,
+	key 			= "xdg",
+	title 			= "xdg-utils",
+	howpublished	= "online",
+	year 			= "2019",
+	month			= "06",
+	url 			= "https://freedesktop.org/wiki/Software/xdg-utils/",
+	publisher		= "freedesktop.org",
+	cited 			= "2021-04-20"
 }
