--- a/projekt-30-prilohy-appendices.tex
+++ b/projekt-30-prilohy-appendices.tex
@@ -1,2 +1,8 @@
 % \chapter{Dokumentace projektu Validované datové uložiště}
 \chapter{Obsah přiloženého média}
+
+\begin{itemize}
+    \item[] \textbf{Složka 1} - XXX
+    \item[] \textbf{Složka 2} - XXX
+    \item[] \textbf{Složka 3} - XXX
+\end{itemize}
