--- a/projekt.tex
+++ b/projekt.tex
@@ -69,9 +69,9 @@
 % to avoid unnecessary replacements in the API descriptions etc.
 \csdoublequotesoff
 
-
+\usepackage{subcaption}
 \usepackage{url}
-
+\usepackage{tabularx}
 
 % =======================================================================
 % balíček "hyperref" vytváří klikací odkazy v pdf, pokud tedy použijeme pdflatex
